--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,3 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
+*.DS_store
 *.py[cod]
-
-# Distribution / packaging
-.Python
 .idea/
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
